add statisticService_05_06_2024